{
  "version": 4,
  "terraform_version": "0.12.5",
  "serial": 156,
  "lineage": "15abddd9-cd47-cd23-8bfc-1a280fd5715d",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "playground",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:453776291432:vpc/vpc-aef4b3c9",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-6cfc6c04",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-53b56534",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Playground-VPC"
                ]
              }
            ],
            "id": "vpc-aef4b3c9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-1a7fca7c",
            "owner_id": "453776291432",
            "state": "available",
            "tags": {
              "Name": "Playground-VPC",
              "Owner": "Terraform",
              "kubernetes.io/cluster/benwhite-eks-workshop": "shared"
            }
          }
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:453776291432:security-group/sg-0502a00346d694380",
            "description": "EKS cluster security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0502a00346d694380",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the EKS cluster API.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-091a47493712d9e92"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "benwhite-eks-workshop20190803115332189200000002",
            "name_prefix": "benwhite-eks-workshop",
            "owner_id": "453776291432",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "benwhite-eks-workshop-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-aef4b3c9"
          }
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:453776291432:security-group/sg-091a47493712d9e92",
            "description": "Security group for all nodes in the cluster.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nodes all egress to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-091a47493712d9e92",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0a0f94f8c19f96a7d"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0502a00346d694380"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow workers pods to receive communication from the cluster control plane.",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0502a00346d694380"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "benwhite-eks-workshop20190803120331062300000007",
            "name_prefix": "benwhite-eks-workshop",
            "owner_id": "453776291432",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "benwhite-eks-workshop-eks_worker_sg",
              "kubernetes.io/cluster/benwhite-eks-workshop": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-aef4b3c9"
          },
          "depends_on": [
            "aws_eks_cluster.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-4294943577",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0502a00346d694380",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.cluster[0]"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-4157293191",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0502a00346d694380",
            "self": false,
            "source_security_group_id": "sg-091a47493712d9e92",
            "to_port": 443,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.cluster[0]"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-2014571754",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-091a47493712d9e92",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.workers[0]"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-2989858995",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-091a47493712d9e92",
            "self": false,
            "source_security_group_id": "sg-0502a00346d694380",
            "to_port": 65535,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.workers[0]"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-1597812850",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-091a47493712d9e92",
            "self": false,
            "source_security_group_id": "sg-0502a00346d694380",
            "to_port": 443,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.workers[0]"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_kubelet",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-2110678366",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-091a47493712d9e92",
            "self": false,
            "source_security_group_id": "sg-091a47493712d9e92",
            "to_port": 0,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.workers[0]"
          ]
        }
      ]
    },
    {
      "module": "module.k8s",
      "mode": "managed",
      "type": "kubernetes_ingress",
      "name": "kube-dashboard-ingress",
      "provider": "provider.kubernetes",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "kube-system/kubernetes-dashboard",
            "load_balancer_ingress": [
              {
                "hostname": "a93ae152ab5e911e993df0264c292aee-1153010984.eu-west-1.elb.amazonaws.com",
                "ip": ""
              }
            ],
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "kubernetes-dashboard",
                "namespace": "kube-system",
                "resource_version": "7895",
                "self_link": "/apis/extensions/v1beta1/namespaces/kube-system/ingresses/kubernetes-dashboard",
                "uid": "890eb299-b5ee-11e9-93df-0264c292aee6"
              }
            ],
            "spec": [
              {
                "backend": [],
                "rule": [
                  {
                    "host": "dashboard.eks-workshop.edge-labs.com",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "service_name": "kubernetes-dashboard",
                                "service_port": "80"
                              }
                            ],
                            "path": "/"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ]
          }
        }
      ]
    },
    {
      "module": "module.k8s",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "ingress_nginx",
      "provider": "provider.kubernetes",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "ingress-nginx",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/name": "ingress-nginx",
                  "app.kubernetes.io/part-of": "ingress-nginx"
                },
                "name": "ingress-nginx",
                "resource_version": "2291",
                "self_link": "/api/v1/namespaces/ingress-nginx",
                "uid": "90bd9a5c-b5e9-11e9-93df-0264c292aee6"
              }
            ]
          }
        }
      ]
    },
    {
      "module": "module.k8s",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "heapster",
      "provider": "provider.kubernetes",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "kube-system/heapster",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "kubernetes.io/cluster-service": "true",
                  "kubernetes.io/name": "Heapster",
                  "task": "monitoring"
                },
                "name": "heapster",
                "namespace": "kube-system",
                "resource_version": "2319",
                "self_link": "/api/v1/namespaces/kube-system/services/heapster",
                "uid": "910c6c69-b5e9-11e9-93df-0264c292aee6"
              }
            ],
            "spec": [
              {
                "cluster_ip": "172.20.115.129",
                "port": [
                  {
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "8082"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "k8s-app": "heapster"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ]
          }
        }
      ]
    },
    {
      "module": "module.k8s",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "ingress_nginx",
      "provider": "provider.kubernetes",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "ingress-nginx/ingress-nginx",
            "load_balancer_ingress": [
              {
                "hostname": "a93ae152ab5e911e993df0264c292aee-1153010984.eu-west-1.elb.amazonaws.com"
              }
            ],
            "metadata": [
              {
                "annotations": {
                  "service.beta.kubernetes.io/aws-load-balancer-backend-protocol": "http",
                  "service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout": "60",
                  "service.beta.kubernetes.io/aws-load-balancer-ssl-cert": "arn:aws:acm:eu-west-1:453776291432:certificate/ad680eb1-67c9-4197-b101-d8403c708c3e",
                  "service.beta.kubernetes.io/aws-load-balancer-ssl-ports": "https"
                },
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/name": "ingress-nginx",
                  "app.kubernetes.io/part-of": "ingress-nginx"
                },
                "name": "ingress-nginx",
                "namespace": "ingress-nginx",
                "resource_version": "2385",
                "self_link": "/api/v1/namespaces/ingress-nginx/services/ingress-nginx",
                "uid": "93ae152a-b5e9-11e9-93df-0264c292aee6"
              }
            ],
            "spec": [
              {
                "cluster_ip": "172.20.252.90",
                "external_traffic_policy": "Cluster",
                "port": [
                  {
                    "name": "http",
                    "node_port": 30569,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "http"
                  },
                  {
                    "name": "https",
                    "node_port": 31360,
                    "port": 443,
                    "protocol": "TCP",
                    "target_port": "http"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/name": "ingress-nginx",
                  "app.kubernetes.io/part-of": "ingress-nginx"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ]
          }
        }
      ]
    },
    {
      "module": "module.k8s",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "kubernetes_dashboard",
      "provider": "provider.kubernetes",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "kube-system/kubernetes-dashboard",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "k8s-app": "kubernetes-dashboard"
                },
                "name": "kubernetes-dashboard",
                "namespace": "kube-system",
                "resource_version": "3520",
                "self_link": "/api/v1/namespaces/kube-system/services/kubernetes-dashboard",
                "uid": "925bd214-b5e9-11e9-93df-0264c292aee6"
              }
            ],
            "spec": [
              {
                "cluster_ip": "172.20.2.216",
                "port": [
                  {
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "9090"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "k8s-app": "kubernetes-dashboard"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ]
          }
        }
      ]
    },
    {
      "module": "module.k8s",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "monitoring_influxdb",
      "provider": "provider.kubernetes",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "kube-system/monitoring-influxdb",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "kubernetes.io/cluster-service": "true",
                  "kubernetes.io/name": "monitoring-influxdb",
                  "task": "monitoring"
                },
                "name": "monitoring-influxdb",
                "namespace": "kube-system",
                "resource_version": "2301",
                "self_link": "/api/v1/namespaces/kube-system/services/monitoring-influxdb",
                "uid": "90c109f0-b5e9-11e9-93df-0264c292aee6"
              }
            ],
            "spec": [
              {
                "cluster_ip": "172.20.73.138",
                "port": [
                  {
                    "node_port": 0,
                    "port": 8086,
                    "protocol": "TCP",
                    "target_port": "8086"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "k8s-app": "influxdb"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ]
          }
        }
      ]
    }
  ]
}